5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1585_1015.log
== TEST (2019-03-21 20:45:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
print(max(a,b,c))
print(s)
print(min(a,b,c))
s=5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:49:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
print(max(a,b,c))
print((max(a,b,c)*0(min(a,b,c)*0))
print(min(a,b,c))
-- ERROR:
File "XXXX", line 9
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:49:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
print(max(a,b,c))
print((max(a,b,c)*0(min(a,b,c)*0))
print(min(a,b,c))
-- ERROR:
File "XXXX", line 9
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:57:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
x=min(a,b,c)
z=max(a,b,c)
y=(a+b+c-x-z)
print(x)
print(y)
print(Z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(Z)
NameError: name 'Z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:58:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
x=min(a,b,c)
z=max(a,b,c)
y=(a+b+c-x-z)
print(x)
print(y)
print(z)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:58:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
x=min(a,b,c)
z=max(a,b,c)
y=(a+b+c-x-z)
print(x)
print(y)
print(z)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:58:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
x=min(a,b,c)
z=max(a,b,c)
y=(a+b+c-x-z)
print(x)
print(y)
print(z)
-- EXECUTION TIME:
0.179983
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:03:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva o primeiro valor:"))
b=int(input("escreva o segundo valor:"))
c=int(input("escreva o terceiro valor:"))
x=min(a,b,c)
z=max(a,b,c)
y=(a+b+c-x-z)
print(x)
print(y)
print(z)
-- EXECUTION TIME:
0.175079
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
